# LinkedinBOT

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  RAILWAY_DEPLOY.md  cli.py  docker-compose.yml  healthcheck.js  package.json  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.bat
.github/: RAILWAY_SETUP.md
.github/workflows/: deploy.yml  test.yml
src/: __init__.py  config.py  health_check.py
tests/: conftest.py
tests/integration/: test_deployment.py
tests/unit/: test_cli.py  test_config.py  test_health_check.py
